@@ -95,7 +95,7 @@ my @functions =  qw(
       negmod invmod addmod submod mulmod divmod powmod muladdmod mulsubmod
       vecsum vecmin vecmax vecprod vecreduce vecextract vecequal vecuniq
       vecany vecall vecnotall vecnone vecfirst vecfirstidx vecmex vecpmex
-      vecsort vecsorti vecfreq vecsingleton
+      vecsort vecsorti vecfreq vecsingleton vecslide
       setbinop sumset setunion setintersect setminus setdelta toset
       setcontains setcontainsany setinsert setremove setinvert
       is_sidon_set is_sumfree_set
