@@ -11,6 +11,7 @@ use Math::Prime::Util qw/vecreduce
                          vecuniq
                          vecsingleton
                          vecfreq
+                         vecslide
                          vecsort vecsorti
                          vecany vecall vecnotall vecnone vecfirst vecfirstidx/;
 
@@ -130,6 +131,7 @@ plan tests => 1    # vecmin
             + 1    # vecsingleton
             + 1    # vecfreq
             + 1    # vecsort
+            + 1    # vecslide
             + 0;
 
 ###### vecmin
@@ -364,3 +366,13 @@ subtest 'vecsort', sub {
   is($sctx, scalar(@actx), "returning vecsort(\@L) gives the number of items");
 };
 sub return_sort { return vecsort(@_); }
+
+###### vecslide
+subtest 'vecslide', sub {
+  is_deeply([vecslide {$a+$b} ()],[],"vecslide with empty array returns empty");
+  is_deeply([vecslide {$a+$b} 1..1],[],"vecslide with 1 element returns empty");
+
+  is_deeply([vecslide {$a+$b} 1..5],[3,5,7,9],"vecslide {\$a+\$b} 1..5");
+  is_deeply([vecslide { "$a->[0] $b->[1]" } (["hello","world"], ["goodbye","friends"], ["love","hate"])], ["hello friends","goodbye hate"], "vecslide with array refs");
+  is(join(", ", vecslide { "$a and $b" } 0..3), "0 and 1, 1 and 2, 2 and 3", "vecslide example from LMU");
+};
