@@ -490,6 +490,7 @@ __DATA__
 25 1180591620717411303424 492716978857699
 24 1180591620717411303424 1004521422339203
 23 1180591620717411303424 2047079488688087
+22 1180591620717411303424 4169825122934310
 #
 # n 2^80
 70 1208925819614629174706176 4283
